<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2014 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!--  BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for Host...</string>
    <string name="select_device">Host List</string>
    <string name="none_paired">No Host have been paired</string>
    <string name="none_found">No Host found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Host</string>
    <string name="button_scan">Search for Host</string>

    <!-- Options Menu -->
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>
    <string name="title_enable_extension_mode">Enable extension Mode</string>
    <string name="title_settings">Settings</string>
    <string name="title_start">START!</string>
    <string name="title_enable_vibration">Enable Vibration</string>
    <string name="title_enter_user_id">Enter User Id</string>
    <string name="title_volume_sliders">VOLUME SLIDERS</string>
    <string name="title_main_volume">Main Volume</string>
    <string name="title_volume_effects">Volume Effects</string>
    <string name="title_host_a_game">Host A Game</string>
    <string name="tilte_join_a_game">Join A Game</string>

</resources>
